feat: EPIC F3
